# BWINF-43-1

./: README.md
Junioraufgabe 1/: QuadratischPraktischGrün.java  README.md  main.py
Junioraufgabe 1 - Java/: QuadratischPraktischGrün.java
Schwierigkeiten/: .gitignore  README.md  Schwierigkeiten.csproj  Schwierigkeiten.sln
Schwierigkeiten/doc/: main.tex
Schwierigkeiten/src/: Algorithm.cs  Graph.cs  Parser.cs  Program.cs
Wandertag/: .gitignore  CMakeLists.txt  README.md  main.cpp
Wandertag/src/: algorithm.cpp  algorithm.h  main.cpp  parser.cpp  parser.h
quadratisch_praktisch_gruen/: README.md  main.py  requirements.txt
quadratisch_praktisch_gruen/dok/: main.tex
texthopsen/: Cargo.toml  WIP.md  crates.md
texthopsen/Dokumentation/: Texthopsen.md
texthopsen/res/: hopsen0.txt
texthopsen/src/: main.rs
